--- a/official/vision/image_classification/configs/examples/efficientnet/imagenet/efficientnet-b0-gpu.yaml
+++ b/official/vision/image_classification/configs/examples/efficientnet/imagenet/efficientnet-b0-gpu.yaml
@@ -8,7 +8,7 @@ runtime:
 train_dataset:
   name: 'imagenet2012'
   data_dir: null
-  builder: 'records'
+  builder: 'tfds'
   split: 'train'
   num_classes: 1000
   num_examples: 1281167
@@ -20,7 +20,7 @@ train_dataset:
 validation_dataset:
   name: 'imagenet2012'
   data_dir: null
-  builder: 'records'
+  builder: 'tfds'
   split: 'validation'
   num_classes: 1000
   num_examples: 50000
@@ -46,7 +46,7 @@ model:
   loss:
     label_smoothing: 0.1
 train:
-  resume_checkpoint: True
-  epochs: 500
+  resume_checkpoint: False
+  epochs: 1
 evaluation:
   epochs_between_evals: 1
