--- a/official/vision/image_classification/configs/examples/resnet/imagenet/gpu.yaml
+++ b/official/vision/image_classification/configs/examples/resnet/imagenet/gpu.yaml
@@ -3,7 +3,7 @@
 # Note: This configuration uses a scaled per-replica batch size based on the number of devices.
 runtime:
   distribution_strategy: 'mirrored'
-  num_gpus: 1
+  num_gpus: 0
   batchnorm_spatial_persistent: True
 train_dataset:
   name: 'imagenet2012'
@@ -13,7 +13,7 @@ train_dataset:
   image_size: 224
   num_classes: 1000
   num_examples: 1281167
-  batch_size: 256
+  batch_size: 4
   use_per_replica_batch_size: True
   dtype: 'float16'
   mean_subtract: True
@@ -26,7 +26,7 @@ validation_dataset:
   image_size: 224
   num_classes: 1000
   num_examples: 50000
-  batch_size: 256
+  batch_size: 4
   use_per_replica_batch_size: True
   dtype: 'float16'
   mean_subtract: True
@@ -45,7 +45,7 @@ model:
   loss:
     label_smoothing: 0.1
 train:
-  resume_checkpoint: True
-  epochs: 90
+  resume_checkpoint: False
+  epochs: 1
 evaluation:
   epochs_between_evals: 1
